syntax = "proto3";

package order.backend;
option  go_package = "gitlab.bcasia.io/thuynga/apps/api/gen/go/order/backend;backend";

import "order/backend/base.proto";

service OrderService {
  rpc GetOrderByIds(GetOrderByIdsReq) returns (GetOrderByIdsRes);
  rpc ExpireOrders(ExpireOrdersReq) returns (ExpireOrdersRes);
}

enum OrderStatus {
  ORDER_STATUS_INVALID         = 0;
  ORDER_STATUS_DRAFT           = 1;
  ORDER_STATUS_IN_PROGRESS     = 2;
  ORDER_STATUS_PAID_SUCCESSFUL = 3;
  ORDER_STATUS_PAID_FAILED     = 4;
  ORDER_STATUS_DELIVERING      = 5;
  ORDER_STATUS_DELIVERED       = 6;
  ORDER_STATUS_CANCELLED       = 7;
  ORDER_STATUS_EXPIRED         = 8;
}

enum OrderPaymentMethod {
  ORDER_PAYMENT_METHOD_INVALID  = 0;
  ORDER_PAYMENT_METHOD_E_WALLET = 1; // e-wallet
}

enum OrderType {
  ORDER_TYPE_INVALID = 0;
  ORDER_TYPE_BUY     = 1;
  ORDER_TYPE_RENT    = 2;
}

enum ShippingAddressType {
  SHIPPING_ADDRESS_TYPE_INVALID        = 0;
  SHIPPING_ADDRESS_TYPE_CENTER_ADDRESS = 1;
  SHIPPING_ADDRESS_TYPE_USER_ADDRESS   = 2;
}

enum OrderProductPurchaseType {
  ORDER_PRODUCT_PURCHASE_TYPE_INVALID      = 0;
  ORDER_PRODUCT_PURCHASE_TYPE_RENT_OR_SELL = 1;
  ORDER_PRODUCT_PURCHASE_TYPE_RENT_ONLY    = 2;
  ORDER_PRODUCT_PURCHASE_TYPE_SELL_ONLY    = 3;
}

enum ProductStatus {
  PRODUCT_STATUS_INVALID     = 0;
  PRODUCT_STATUS_PUBLISHED   = 1;
  PRODUCT_STATUS_UNPUBLISHED = 2;
  PRODUCT_STATUS_DRAFT       = 3;
  PRODUCT_STATUS_DELETED     = 4;
}

message OrderInfo {
  string                        id                    = 1;
  int64                         created_at            = 2;
  int64                         updated_at            = 3;
  string                        created_by            = 4;
  string                        updated_by            = 5;
  string                        partnership_id        = 6;
  string                        cart_id               = 7;
  string                        user_id               = 8;
  OrderCurrencyInfo             currency              = 9;
  repeated OrderProductInfoItem products              = 10;
  double                        total_product_amount  = 11;
  OrderPaymentMethodInfo        payment_method        = 12;
  repeated OrderPromotionInfo   promotions            = 13; // list applied promotions
  double                        total_discount_amount = 14;
  OrderStatus                   status                = 15;
  ShippingAddressInfo           shipping_address      = 16;
  double                        shipping_fee_amount   = 17;
  InstallmentInfo               installment           = 18;
  repeated OrderProductInfoItem extra_services        = 19;
  double                        extra_services_amount = 20;
  double                        fee_amount            = 21;
  double                        total_amount          = 22;
  string                        order_code            = 23;
  OrderType                     order_type            = 24;
  string                        note                  = 25;
  int64                         expired_time          = 26;
  string                        payment_id            = 27;
}

message OrderProductInfo {
  string                   id               = 1;
  ProductStatus            status           = 2;
  string                   name             = 3;
  repeated string          medias           = 4;
  repeated string          tags             = 5;
  string                   sku              = 6;
  double                   listed_price     = 7;
  double                   discount_percent = 8;
  double                   price            = 9;
  string                   uom              = 10; // unit of measurement
  string                   barcode          = 11;
  OrderProductCurrencyInfo currency         = 12;
  string                   brand            = 13;
  Boolean                  unlimited        = 14;
  string                   partnership_id   = 15;
  string                   country          = 16;
  string                   language         = 17;
}

message OrderProductCurrencyInfo {
  string id   = 1;
  string name = 2;
  string code = 3;
  string icon = 4;
}

message OrderProductInfoItem {
  OrderProductInfo product_info = 1;
  int64            quantity     = 2;
}

message OrderPaymentMethodInfo {
  string             name           = 1;
  string             code           = 2;
  OrderPaymentMethod method         = 3;
  double             fee            = 4;
  double             additional_fee = 5;
  string             display_fee    = 6;
  string             icon           = 7;
  string             id             = 8;
}

message OrderPromotionInfo {
  string id               = 1;
  string name             = 2;
  string short_desc       = 3;
  string code             = 4;
  string cover_image      = 5;
  double discount_percent = 6;
}

message OrderCurrencyInfo {
  string id   = 1;
  string name = 2;
  string code = 3;
  string icon = 4;
}

message OrderProductItem {
  string product_id = 1;
  string package_id = 2;
  int64  quantity   = 3;
}

message ShippingAddressInfo {
  ShippingAddressType type         = 1;
  string              address      = 2;
  string              city         = 3;
  string              district     = 4;
  string              region       = 5;
  string              postcode     = 6;
  string              country      = 7;
  double              lat          = 8;
  double              lon          = 9;
  string              name         = 10;
  string              phone_code   = 11;
  string              phone_number = 12;
}

message InstallmentInfo {
  string id       = 1;
  string duration = 2;
  double fee      = 3;
}

message OrderProductAttribute {
  message Value {
    string language = 1;
    string value    = 2;
  }
  string         master_data_id = 1;
  repeated Value values         = 2;
}
//================================= RESPONSE ===================================

message GetOrderByIdsReq { repeated string order_ids = 1; }
message ExpireOrdersReq {}

//================================= RESPONSE ===================================

message GetOrderByIdsRes { repeated OrderInfo orders = 1; }
message ExpireOrdersRes {}
